Revert "Fixed spacing for datepicker"
This reverts commit 5f06b20c107fdae9e1f12c95766fc419e596061e.

--- a/App/ECA.WebApp.AngularJS/styles/_form.scss
+++ b/App/ECA.WebApp.AngularJS/styles/_form.scss
@@ -15,15 +15,6 @@
     color: $primarytext;
 }
 
-.dropdown-menu .btn {
-    padding: 0 10px;
-}
-
-.dropdown-menu table tr th {
-    padding-top:  0;
-    padding-bottom: 0;
-}
-
 #modal {
     border-top: 0;
 }
@@ -72,7 +63,7 @@
     height: 42px;
     letter-spacing: 1.5px;
     outline: 0;
-    padding: 0 20px;
+    padding: 0 30px;
     text-transform: uppercase;
 
     &:disabled {
