--- a/App/ECA.WebApp.AngularJS/styles/_table.scss
+++ b/App/ECA.WebApp.AngularJS/styles/_table.scss
@@ -24,8 +24,8 @@ table {
     border-bottom: 1px solid #e6e6e6;
 
     th {
-      padding-bottom: 0px;
-      padding-top: 0px;
+      padding-bottom: 24px;
+      padding-top: 28px;
 
       h3 {
         margin-top: 0;
